test/corpus/functions.txt
===
empty function
===
fn main() {}
---
(source_file
	(function
		(identifier)
		(param_list)
		(code_block)))
===
one parameter function
===
fn test(param: uint32) {}
---
(source_file
	(function
		(identifier)
		(param_list
			(parameter
				(identifier)
				(type_signature
					(identifier))))
		(code_block)))
===
two parameter function
===
fn main(argc: uint32, argv: string[]) {}
---
(source_file
	(function
		(identifier)
		(param_list
			(parameter
				(identifier)
				(type_signature
					(identifier)))
			(parameter
				(identifier)
				(type_signature
					(identifier))))
		(code_block)))
===
function w/ return type
===
fn main(): uint32 {}
---
(source_file
	(function
		(identifier)
		(param_list)
		(type_signature
			(identifier))
		(code_block)))
===
one parameter function w/ return type
===
fn test(param: uint32): uint32 {}
---
(source_file
	(function
		(identifier)
		(param_list
			(parameter
				(identifier)
				(type_signature
					(identifier))))
		(type_signature
			(identifier))
		(code_block)))
===
two parameter function w/ return type
===
fn main(argc: uint32, argv: string[]): uint32 {}
---
(source_file
	(function
		(identifier)
		(param_list
			(parameter
				(identifier)
				(type_signature
					(identifier)))
			(parameter
				(identifier)
				(type_signature
					(identifier))))
		(type_signature
			(identifier))
		(code_block)))
===
one variadic parameter function
===
fn test(...param: uint32[]): uint32 {}
---
(source_file
	(function
		(identifier)
		(param_list
			(parameter
				(identifier)
				(type_signature
					(identifier))))
		(type_signature
			(identifier))
		(code_block)))
===
two parameter function w/ variadic argument
===
fn main(argc: uint32, ...argv: string[]): uint32 {}
---
(source_file
	(function
		(identifier)
		(param_list
			(parameter
				(identifier)
				(type_signature
					(identifier)))
			(parameter
				(identifier)
				(type_signature
					(identifier))))
		(type_signature
			(identifier))
		(code_block)))
