test/corpus/values.txt
===
empty string
===
let _: _ = "";
---
(source_file 
    (declaration
        (let_declaration
        (identifier)
        (type_signature
            (identifier))
        (value
        	(singleton
              (primitive
                (string_literal)))))))
